--- a/Fitoday/Info.plist
+++ b/Fitoday/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Comfortaa-Bold</string>
+		<string>Comfortaa-Light</string>
+		<string>Comfortaa-Medium</string>
+		<string>Comfortaa-Regular</string>
+		<string>Comfortaa-SemiBold</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
